# rust4node

./: .gitignore  Cargo.toml  index.d.ts  index.node  package.json  tsconfig.json
node/: index.ts
src/: fun.rs  lib.rs
